// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiProgress has max 1`] = `
<div>
  <progress
    aria-label="aria-label"
    class="euiProgress euiProgress--native euiProgress--m euiProgress--secondary testClass1 testClass2"
    data-test-subj="test subject string"
    max="100"
  />
</div>
`;

exports[`EuiProgress has value 1`] = `
<div
  aria-label="aria-label"
  class="euiProgress euiProgress--indeterminate euiProgress--m euiProgress--secondary testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`EuiProgress has valueText and Label 1`] = `
<div>
  <div
    class="euiProgress__data"
  >
    <div
      class="euiProgress__label"
    >
      <div
        class="euiText euiText--extraSmall eui-textTruncate"
      >
        Label
      </div>
    </div>
    <div
      class="euiProgress__valueText"
    >
      <div
        class="euiText euiText--extraSmall eui-textTruncate"
      >
        <div
          class="euiTextColor euiTextColor--secondary"
        >
          50
        </div>
      </div>
    </div>
  </div>
  <progress
    aria-label="aria-label"
    class="euiProgress euiProgress--native euiProgress--m euiProgress--secondary testClass1 testClass2"
    data-test-subj="test subject string"
    max="100"
    value="50"
  />
</div>
`;

exports[`EuiProgress is determinate 1`] = `
<div>
  <progress
    aria-label="aria-label"
    class="euiProgress euiProgress--native euiProgress--m euiProgress--secondary testClass1 testClass2"
    data-test-subj="test subject string"
    max="100"
    value="50"
  />
</div>
`;

exports[`EuiProgress is indeterminate 1`] = `
<div
  aria-label="aria-label"
  class="euiProgress euiProgress--indeterminate euiProgress--m euiProgress--secondary testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`EuiProgress is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiProgress euiProgress--indeterminate euiProgress--m euiProgress--secondary testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;
